Added intangible product CRUD infrastructure. Fixed autoassessment event listener issues.